--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcsh 'Intellect'
 - !lcc 'RA'
 - !lcc 'BF'
+- GITenberg
 title: "Sound Mind\r\nOr, Contributions to the natural history and physiology of the\
   \ human intellect"
 url: http://www.gutenberg.org/ebooks/31747
